<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsMovie">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="left">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />
            <Button
                android:id="@+id/saveButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/Favorite"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_data"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_date_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textStyle="bold"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                />
            <TextView
                android:id="@+id/tv_error_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Error_Message_Trailer"
                android:background="#D3B8D8"
                android:visibility="invisible"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textStyle="bold"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:id="@+id/tv_error_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Error_Message_Review"
                android:background="#D3B8D8"
                android:visibility="invisible"
                />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
